RESOLVED FIXED226476
Fix thread safety issues in MediaStreamAudioSourceNode
https://bugs.webkit.org/show_bug.cgi?id=226476
Summary Fix thread safety issues in MediaStreamAudioSourceNode
Chris Dumez
Reported 2021-05-31 17:30:43 PDT
Adopt thread safety analysis annotations in MediaStreamAudioSourceNode and fix bugs found by clang.
Attachments
Patch (4.85 KB, patch)
2021-05-31 17:34 PDT, Chris Dumez
no flags
Patch (4.48 KB, patch)
2021-06-01 07:48 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-05-31 17:34:00 PDT
youenn fablet
Comment 2 2021-06-01 04:57:49 PDT
Comment on attachment 430219 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430219&action=review > Source/WebCore/Modules/webaudio/MediaStreamAudioSourceNode.cpp:109 > + if (sourceSampleRate == sampleRate()) We could keep a single sampleRate call as a minor optimization.
Chris Dumez
Comment 3 2021-06-01 07:37:00 PDT
(In reply to youenn fablet from comment #2) > Comment on attachment 430219 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=430219&action=review > > > Source/WebCore/Modules/webaudio/MediaStreamAudioSourceNode.cpp:109 > > + if (sourceSampleRate == sampleRate()) > > We could keep a single sampleRate call as a minor optimization. SampleRate() is an in-line function so it did not seem worth it?
youenn fablet
Comment 4 2021-06-01 07:44:56 PDT
(In reply to Chris Dumez from comment #3) > (In reply to youenn fablet from comment #2) > > Comment on attachment 430219 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=430219&action=review > > > > > Source/WebCore/Modules/webaudio/MediaStreamAudioSourceNode.cpp:109 > > > + if (sourceSampleRate == sampleRate()) > > > > We could keep a single sampleRate call as a minor optimization. > > SampleRate() is an in-line function so it did not seem worth it? Isn't it a virtual method?
Chris Dumez
Comment 5 2021-06-01 07:46:11 PDT
(In reply to youenn fablet from comment #4) > (In reply to Chris Dumez from comment #3) > > (In reply to youenn fablet from comment #2) > > > Comment on attachment 430219 [details] > > > Patch > > > > > > View in context: > > > https://bugs.webkit.org/attachment.cgi?id=430219&action=review > > > > > > > Source/WebCore/Modules/webaudio/MediaStreamAudioSourceNode.cpp:109 > > > > + if (sourceSampleRate == sampleRate()) > > > > > > We could keep a single sampleRate call as a minor optimization. > > > > SampleRate() is an in-line function so it did not seem worth it? > > Isn't it a virtual method? Oh, it is. and it isn't inline either. I was confused.
Chris Dumez
Comment 6 2021-06-01 07:48:21 PDT
Chris Dumez
Comment 7 2021-06-01 08:08:14 PDT
(In reply to Chris Dumez from comment #5) > (In reply to youenn fablet from comment #4) > > (In reply to Chris Dumez from comment #3) > > > (In reply to youenn fablet from comment #2) > > > > Comment on attachment 430219 [details] > > > > Patch > > > > > > > > View in context: > > > > https://bugs.webkit.org/attachment.cgi?id=430219&action=review > > > > > > > > > Source/WebCore/Modules/webaudio/MediaStreamAudioSourceNode.cpp:109 > > > > > + if (sourceSampleRate == sampleRate()) > > > > > > > > We could keep a single sampleRate call as a minor optimization. > > > > > > SampleRate() is an in-line function so it did not seem worth it? > > > > Isn't it a virtual method? > > Oh, it is. and it isn't inline either. I was confused. Fixed before landing, thanks for catching.
EWS
Comment 8 2021-06-01 08:35:01 PDT
Committed r278309 (238346@main): <https://commits.webkit.org/238346@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430261 [details].
Radar WebKit Bug Importer
Comment 9 2021-06-01 08:36:16 PDT
Note You need to log in before you can comment on or make changes to this bug.